--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
   <!-- inlcude google nunito sans font cdn link -->
   <link rel="preconnect" href="https://fonts.gstatic.com/">
 
-  <link rel="apple-touch-icon" sizes="180x180" href="https://loreto.in/assets/images/home/logo.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://loreto.in/images/home/logo.png">
 
-  <link rel="icon" type="%PUBLIC_URL%/image/png" sizes="32x32" href="https://loreto.in/assets/images/home/logo.png">
+  <link rel="icon" type="%PUBLIC_URL%/image/png" sizes="32x32" href="https://loreto.in/images/home/logo.png">
 
-  <link rel="icon" type="%PUBLIC_URL%/image/png" sizes="16x16" href="https://loreto.in/assets/images/home/logo.png">
+  <link rel="icon" type="%PUBLIC_URL%/image/png" sizes="16x16" href="https://loreto.in/images/home/logo.png">
 
   <link
     href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&amp;display=swap"
