Adding the sub page review changes

--- a/public/index.html
+++ b/public/index.html
@@ -4,17 +4,27 @@
 <head>
   <!-- set the encoding of your site -->
   <meta charset="utf-8">
+  <!-- set the viewport width and initial scale -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- set the hand held friendly -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <!-- set the description -->
+  <meta name="description"
+    content="Loreto Province , Kolkata , Kolkata Province, Loreto Sisters Province , Loreto Sisters , Institute of Blessed Virgin Mary">
+  <!-- set the keywords -->
+  <meta name="title" content="Welcome to Loreto Sisters Province Kolkata">
   <!-- set the page title -->
   <title>Welcome to Institute of Blessed Virigin Mary | Loreto Sisters - Kolkata</title>
+  <!-- include the site favicon -->
+  <link rel="canonical" href="https://loreto.in" />
   <!-- inlcude google nunito sans font cdn link -->
   <link rel="preconnect" href="https://fonts.gstatic.com/">
 
-  <link rel="apple-touch-icon" sizes="180x180" href="https://loreto.in/images/home/logo.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/logo.png">
 
-  <link rel="icon" type="%PUBLIC_URL%/image/png" sizes="32x32" href="https://loreto.in/images/home/logo.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/logo.png">
 
-  <link rel="icon" type="%PUBLIC_URL%/image/png" sizes="16x16" href="https://loreto.in/images/home/logo.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/logo.png">
 
   <link
     href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&amp;display=swap"
@@ -35,13 +45,15 @@
   <link rel="stylesheet" href="assets/css/rtl.css" />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+  <!-- include the site icon -->
+  <script defer src='https://static.cloudflareinsights.com/beacon.min.js'
+    data-cf-beacon='{"token": "aacb93841344480396024851beb83c62"}'></script>
 
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-
 </body>
 
 </html>
